--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,14 @@ target_link_libraries(Tests PRIVATE Catch2::Catch2WithMain) #link catch to test.
 include(CTest)
 include(Catch)
 catch_discover_tests(Tests) # must be named the same as your test executable
+# Copy `data/` into the build directory so runtime can open files with `data/...`
+add_custom_target(copy_data ALL
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+                        ${CMAKE_SOURCE_DIR}/data
+                        ${CMAKE_BINARY_DIR}/data
+        COMMENT "Copying data directory to build directory"
+)
+
+# Ensure both executables are built after the data is copied
+add_dependencies(Main copy_data)
+add_dependencies(Tests copy_data)
